logs/omnium.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/omnium'...
Listing './lib/python3.5/site-packages/omnium/cmds'...
Compiling './lib/python3.5/site-packages/omnium/cmds/__init__.py'...
***   File "./lib/python3.5/site-packages/omnium/cmds/__init__.py", line 32
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/omnium/data'...
Listing './lib/python3.5/site-packages/omnium/data/files'...
Listing './lib/python3.5/site-packages/omnium/data/files/vn10.5'...
Listing './lib/python3.5/site-packages/omnium/omnium_cmds'...
Compiling './lib/python3.5/site-packages/omnium/omnium_cmds/__init__.py'...
***   File "./lib/python3.5/site-packages/omnium/omnium_cmds/__init__.py", line 23
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/omnium/threed_viewer.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (threed_viewer.py, line 88)
Compiling './lib/python3.5/site-packages/omnium/twod_viewer.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (twod_viewer.py, line 33)
Listing './lib/python3.5/site-packages/omnium/viewers'...
Listing './lib/python3.5/site-packages/omnium/viewers/data_displays'...
Listing './lib/python3.5/site-packages/omnium-0.9.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
